--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -39,7 +39,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/help_button"
+            android:text="@string/info_button"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:drawableLeft="@drawable/info_icon"
             android:id="@+id/infoButton"
