--- a/app/src/main/res/xml/user_preference.xml
+++ b/app/src/main/res/xml/user_preference.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Categoría 1">
-        <CheckBoxPreference
-            android:key="opcion1"
-            android:title="Preferencia 1"
-            android:summary="Descripción de la preferencia 1" />
+    <PreferenceCategory android:title="@string/prefer_user">
         <EditTextPreference
-            android:key="opcion2"
-            android:title="Preferencia 2"
-            android:summary="Descripción de la preferencia 2"
-            android:dialogTitle="Introduce valor" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="Categoría 2">
+            android:key="user_name"
+            android:title="@string/user_name_title"
+            android:summary="@string/user_name_summary"
+            android:dialogTitle="@string/user_name_dialog" />
         <ListPreference
-            android:key="opcion3"
-            android:title="Preferencia 3"
-            android:summary="Descripción de la preferencia 3"
-            android:dialogTitle="Indicar Pais"
-            android:entries="@array/pais"
-            android:entryValues="@array/codigopais" />
+            android:key="show_order"
+            android:title="Ordenar productos por"
+            android:summary=""
+            android:dialogTitle="Ordenar por"
+            android:entries="@array/show_by"
+            android:entryValues="@array/show_by_values" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/prefer_show">
+        <CheckBoxPreference
+            android:key="notifications"
+            android:title="@string/notifications_title"
+            android:summary="@string/notifications_summary" />
     </PreferenceCategory>
 </PreferenceScreen>
