--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -10,9 +10,9 @@
         android:gravity="center"
         android:columnWidth="100dp"
         android:stretchMode="columnWidth"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:layout_weight="1"
+        android:layout_height="0dp"
         android:id="@+id/grid"
         />
 
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Comprar"
-        android:id="@+id/button"
+        android:id="@+id/buyButton"
         android:layout_gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
