--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -3,13 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="#fff">
 
-    <GridView
+    <ListView
         android:numColumns="auto_fit"
         android:gravity="center"
-        android:columnWidth="100dp"
-        android:stretchMode="columnWidth"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp"
