--- a/app/src/main/res/drawable/button_shape_green.xml
+++ b/app/src/main/res/drawable/button_shape_green.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="14dp"
-        />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="14dp" />
     <gradient
         android:angle="90"
-        android:centerX="35%"
         android:centerColor="#56c501"
-        android:startColor="#5ed501"
+        android:centerX="35%"
         android:endColor="#4eb201"
-        android:type="linear"
-        />
+        android:startColor="#5ed501"
+        android:type="linear" />
     <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
         android:bottom="0dp"
-        />
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp" />
     <size
         android:width="200dp"
-        android:height="40dp"
-        />
+        android:height="40dp" />
     <stroke
         android:width="3dp"
-        android:color="#367a00"
-        />
+        android:color="#367a00" />
 </shape>
