--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -2,27 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical"
-    tools:context="eu.elraro.ahorramas.BuyActivity"
-    android:background="#fff">
+    tools:context="eu.elraro.ahorramas.eu.elraro.ahorramas.activity.BuyActivity">
 
     <ListView
-        android:numColumns="auto_fit"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"
         android:id="@+id/grid"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:numColumns="auto_fit" />
 
     <Button
+        android:id="@+id/buyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comprar"
-        android:id="@+id/buyButton"
         android:layout_gravity="center_horizontal"
+        android:background="@drawable/button_shape_red_small"
+        android:text="Comprar"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
-        android:background="@drawable/button_shape_red_small"/>
+        android:textSize="15sp" />
 
 </LinearLayout>
