--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#fff"
-    tools:context="eu.elraro.ahorramas.LoginActivity">
+    tools:context="eu.elraro.ahorramas.eu.elraro.ahorramas.activity.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -16,20 +16,20 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
-        android:visibility="gone"
-        android:layout_gravity="center_horizontal" />
+        android:visibility="gone" />
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/login_form">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,18 +40,18 @@
 
             <EditText
                 android:id="@+id/emailEditText"
-                android:inputType="textEmailAddress"
-                android:hint="@string/email_text_hint"
-                android:focusable="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:hint="@string/email_text_hint"
+                android:inputType="textEmailAddress" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -62,23 +62,23 @@
 
             <EditText
                 android:id="@+id/passwordEditText"
-                android:inputType="textPassword"
-                android:hint="@string/password_text_hint"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:hint="@string/password_text_hint"
+                android:inputType="textPassword" />
 
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_button"
-            android:id="@+id/buttonLogin"
             android:layout_gravity="center_horizontal"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/button_shape_red"
-            android:layout_marginTop="20dp"/>
+            android:text="@string/login_button"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
