--- a/app/src/main/res/xml/user_preference.xml
+++ b/app/src/main/res/xml/user_preference.xml
@@ -1,24 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/prefer_user">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <PreferenceCategory
+        android:title="@string/prefer_user"
+        android:key="general_settings">
         <EditTextPreference
+            android:dialogTitle="@string/user_name_dialog"
             android:key="user_name"
-            android:title="@string/user_name_title"
             android:summary="@string/user_name_summary"
-            android:dialogTitle="@string/user_name_dialog" />
+            android:title="@string/user_name_title" />
         <ListPreference
-            android:key="show_order"
-            android:title="Ordenar productos por"
-            android:summary=""
             android:dialogTitle="Ordenar por"
             android:entries="@array/show_by"
-            android:entryValues="@array/show_by_values" />
+            android:entryValues="@array/show_by_values"
+            android:key="show_order"
+            android:summary=""
+            android:title="Ordenar productos por" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/prefer_show">
         <CheckBoxPreference
             android:key="notifications"
-            android:title="@string/notifications_title"
-            android:summary="@string/notifications_summary" />
+            android:summary="@string/notifications_summary"
+            android:title="@string/notifications_title" />
     </PreferenceCategory>
 </PreferenceScreen>
